varnish/snapshots/shared3_tuple@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `tuple`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import tuple;

// Or load vmod from a specific file
import tuple from "path/to/libtuple.so";
```

### Function `STRING tuple.ref_to_slice_lifetime()`
